<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_menu"
    android:orientation="vertical"
    android:weightSum="1" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:contentDescription="@string/autodefinidos"
        android:src="@drawable/logo" >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textoDificultad"
            style="@style/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dificultad" />

        <SeekBar
            android:id="@+id/dificultad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:progress="0"
            android:progressDrawable="@drawable/seekbar_progress_bg" />

        <TextView
            android:id="@+id/descDificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="#A0A0A0"
            android:text="@string/facil"
            android:textSize="20dp" />
        
         <TextView
            android:id="@+id/textoTamanio"
            style="@style/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanio" />

        <SeekBar
            android:id="@+id/tamanio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:progress="0"
            android:progressDrawable="@drawable/seekbar_progress_bg" />


        <TextView
            android:id="@+id/descTamanio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#A0A0A0"
            android:text="@string/paquenio"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/jugar"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/jugar"
            android:textSize="30dp" />

    </LinearLayout>
    
</LinearLayout>